--- a/src/css/ymacs-common.css
+++ b/src/css/ymacs-common.css
@@ -40,7 +40,10 @@
 
 .Ymacs-frame-content {
   white-space: pre;
+  /* padding: 4px; */
   padding-bottom: 1000px;
+  z-index: 10;
+  position: relative;
 }
 
 .Ymacs-caret {
@@ -62,7 +65,7 @@
 .Ymacs_Minibuffer .Ymacs_Modeline { display: none; }
 
 .Ymacs_Minibuffer .Ymacs-frame-content {
-  padding-bottom: 0;
+  padding: 0;
 }
 
 /* .Ymacs_Frame-hasOverlays .Ymacs-current-line { */
@@ -73,9 +76,12 @@
   border-radius: 15px;
 }
 
-.Ymacs_Overlay { position: absolute; right: 0; opacity: 0.5; filter: alpha(opacity=50); }
-.Ymacs_Overlay .match-paren { opacity: 0.4; filter: alpha(opacity=40); }
-.Ymacs_Overlay .selection { opacity: 0.7; filter: alpha(opacity=70); }
+.Ymacs_Overlay { opacity: 0.8; }
+.Ymacs_Overlay div {
+  position: absolute;
+  right: 0;
+  left: 0;
+}
 
 .Ymacs_Message_Popup {
   background-color: wheat;
@@ -106,6 +112,10 @@
   display: flex;
   overflow: hidden;
   gap: 5px;
+  background-color: #888;
+}
+.Ymacs_SplitCont_dragging {
+  background-color: orange;
 }
 .Ymacs_SplitCont_horiz {
   flex-direction: column;
@@ -115,6 +125,8 @@
   flex-direction: row;
   cursor: ew-resize;
 }
+.Ymacs_Resize_horiz { cursor: ns-resize !important }
+.Ymacs_Resize_vert { cursor: ew-resize !important }
 .Ymacs_SplitCont_horiz > div {
   height: 50%;
   width: 100%;
