--- a/src/css/ymacs-syntax-light.css
+++ b/src/css/ymacs-syntax-light.css
@@ -76,13 +76,13 @@
   border-top: 1px solid #fff;
 }
 
-.Ymacs-Theme-light .Ymacs-line-numbers .Ymacs-frame-content div.line:before {
+.Ymacs.Ymacs-Theme-light.Ymacs-line-numbers .Ymacs-frame-content div.line:before {
   border-right: 1px dotted #888;
   color: #777;
   background-color: #eee;
 }
 
-.Ymacs-Theme-light .Ymacs-line-numbers .Ymacs-frame-content div.Ymacs-current-line:before {
+.Ymacs.Ymacs-Theme-light.Ymacs-line-numbers .Ymacs-frame-content div.Ymacs-current-line:before {
   color: #000;
   background-color: #def;
 }
