--- a/src/css/ymacs-syntax-light.css
+++ b/src/css/ymacs-syntax-light.css
@@ -54,7 +54,7 @@
   --ymacs-cursor-fg: #fff;
 }
 
-.Ymacs-Theme-light .Ymacs_Frame-focus .Ymacs-current-line {
+.Ymacs-Theme-light .Ymacs_Frame:focus .Ymacs-current-line {
   /* background-color: #eda; */
 }
 
