--- a/src/css/ymacs-syntax-dark.css
+++ b/src/css/ymacs-syntax-dark.css
@@ -90,7 +90,7 @@
   border-top: 1px solid #fff;
 }
 
-.Ymacs.Ymacs-Theme-dark.Ymacs-line-numbers .Ymacs-frame-content div.line:before {
+.Ymacs.Ymacs-Theme-dark.Ymacs-line-numbers .Ymacs-frame-content:before {
   border-right: 1px solid #000;
   background-color: rgba(0, 0, 0, 0.2);
 }
