--- a/src/css/ymacs-common.css
+++ b/src/css/ymacs-common.css
@@ -8,12 +8,13 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
+  position: relative;
+  font-family: "Iosevka Custom", "DejaVu Sans Mono", "Lucida Sans Typewriter", "Ubuntu Mono", monospace;
+  font-size: 16px;
 }
 
 .Ymacs_Frame {
   cursor: default;
-  font-size: 16px;
-  font-family: "Iosevka Custom", "DejaVu Sans Mono", "Lucida Sans Typewriter", "Ubuntu Mono", monospace;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -68,13 +69,18 @@
 }
 .Ymacs_Overlay .isearch-lazy {}
 
-.Ymacs_Message_Popup {
+.Ymacs_Popup {
   background-color: wheat;
   color: #000;
+  border: 1px solid #000;
   padding: 10px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  max-height: 70%;
+  z-index: 40;
 }
-
-.Ymacs_Completion_Popup .DlMenuItem .div2 { font-size: 100%; }
 
 .Ymacs.Ymacs-line-numbers .Ymacs-frame-content:before {
   box-sizing: border-box;
