[dropdl] more utility functions

--- a/src/css/ymacs-common.css
+++ b/src/css/ymacs-common.css
@@ -73,7 +73,7 @@
   background-color: wheat;
   color: #000;
   border: 1px solid #000;
-  padding: 10px;
+  padding: 1em 1.5em;
   position: absolute;
   left: 50%;
   top: 50%;
