--- a/src/css/ymacs-common.scss
+++ b/src/css/ymacs-common.scss
@@ -137,9 +137,13 @@
 
 @property --ymacs-cursor-bg {
   syntax: "<color>";
+  inherits: true;
+  initial-value: orange;
 }
 @property --ymacs-cursor-fg {
   syntax: "<color>";
+  inherits: true;
+  initial-value: #000;
 }
 
 @keyframes ymacs-caret-blink {
