--- a/src/css/ymacs-common.scss
+++ b/src/css/ymacs-common.scss
@@ -110,31 +110,30 @@ $lnwidth: 3em;
 .Ymacs_Frame .minibuffer-prompt { font-weight: bold; text-decoration: underline; }
 
 .Ymacs_SplitCont {
-  display: flex;
+  display: grid;
   overflow: hidden;
-  gap: 5px;
-  background-color: #888;
 
-  &.dragging {
+  .bar {
+    background-color: #888;
+    z-index: 50;
+  }
+
+  &.dragging > .bar {
     background-color: #c52;
   }
 
   &.horiz {
-    flex-direction: column;
+    grid-template-rows: 1fr auto 1fr;
     cursor: ns-resize;
-
-    > div {
-      height: 50%;
-      width: 100%;
+    > .bar {
+      height: 4px;
     }
   }
   &.vert {
-    flex-direction: row;
+    grid-template-columns: 1fr auto 1fr;
     cursor: ew-resize;
-
-    > div {
-      width: 50%;
-      height: 100%;
+    > .bar {
+      width: 4px;
     }
   }
 }
