--- a/src/css/ymacs-common.scss
+++ b/src/css/ymacs-common.scss
@@ -61,8 +61,6 @@
 }
 .Ymacs_Overlay .isearch-lazy {}
 
-$lnwidth: 3em;
-
 .Ymacs.Ymacs-line-numbers .Ymacs-frame-content:before {
   box-sizing: border-box;
   content: "";
@@ -71,31 +69,23 @@ $lnwidth: 3em;
   left: 0;
   top: 0;
   bottom: 0;
-  width: $lnwidth;
+  width: 3.3em;
 }
 .Ymacs.Ymacs-line-numbers .Ymacs-frame-content {
   counter-reset: ymacs-line 0;
-  padding-left: $lnwidth;
+  padding-left: calc(3.3em + 7px);
 }
-.Ymacs.Ymacs-line-numbers .Ymacs-frame-content div.line {
-  counter-increment: ymacs-line;
-  position: relative;
-  padding-left: 5px;
-}
+.Ymacs.Ymacs-line-numbers .Ymacs-frame-content div.line { counter-increment: ymacs-line; }
 .Ymacs.Ymacs-line-numbers .Ymacs-frame-content div.line:before {
   box-sizing: border-box;
   color: #888;
-  display: flex;
-  flex-wrap: wrap;
-  align-content: center;
-  justify-content: end;
+  display: block;
   position: absolute;
-  left: -$lnwidth;
-  top: 0;
-  bottom: 0;
-  width: calc($lnwidth - 1px);
-  padding-right: 5px;
+  left: 0;
+  width: calc(3.3em - 1px);
+  padding-right: 7px;
   content: counter(ymacs-line, decimal);
+  text-align: right;
 }
 
 .Ymacs .Ymacs_Frame.Ymacs_Minibuffer .Ymacs-frame-content {
