--- a/src/css/themes/emacs-sanityinc-tomorrow-night.scss
+++ b/src/css/themes/emacs-sanityinc-tomorrow-night.scss
@@ -4,6 +4,9 @@
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_Frame .Ymacs_Overlay.isearch div { color: #1d1f21; background-color: #f0c674; }
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_Frame .Ymacs_Overlay.isearch-lazy div { color: #1d1f21; background-color: #8abeb7; }
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_Frame .Ymacs_Overlay.match-paren div { color: #000000; background-color: #32cd32; }
+.Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_Frame .Ymacs_Modeline { color: #969896; background-color: #282a2e; }
+.Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_Frame-active .Ymacs_Modeline { color: #c5c8c6; background-color: #373b41; }
+.Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_Frame .minibuffer-prompt { color: #81a2be; }
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_Frame .type { color: #81a2be; }
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_Frame .builtin { color: #b294bb; }
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_Frame .function-name { color: #de935f; }
